<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="app_name">My Application</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="title_notifications">Notifications</string>
    <string name="type_city_name_here">Введите название города</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">Город: <xliff:g name="name">%s</xliff:g></string>
    <string name="region_name">Регион: <xliff:g name="name">%s</xliff:g></string>
    <string name="country_name">Страна: <xliff:g name="name">%s</xliff:g></string>
    <string name="geoPosition">Координаты: %1$s, %2$s</string>
    <string name="temperature">Температура: мин: %1$s, макс: %2$s</string>
    <string name="date">Дата: <xliff:g name="date">%s</xliff:g></string>
    <string name="clear_history">Очистить историю</string>
</resources>