<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".presentation.ui.city_weather_screen.CityFragment">

    <TextView
        android:text="@string/city_name"
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/region_name"
        android:id="@+id/region_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/country_name"
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/geoPosition"
        android:id="@+id/geoPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/temperature"
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/date"
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>